--- a/RationShop/WebApp/templates/ShopStock.html
+++ b/RationShop/WebApp/templates/ShopStock.html
@@ -46,12 +46,12 @@
     <div class="header">
         <div class="container">
             <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-2 col logo_section">
                     <div class="full">
                         <div class="center-desk">
                             <div class="logo">
                                 <a href="{% url 'Home' %}"><img src="{% static 'web/assets/images/Rationlogo.png' %}"
-                                                                style="width:300px;height:100px;"
+                                                                style="width:280px;height:100px;"
                                                                 alt="#"/></a>
                             </div>
                         </div>
@@ -69,14 +69,17 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'Requests' %}"> Request </a>
+                                </li>
                                 <li class="nav-item active">
                                     <a class="nav-link" href="{% url 'ShopStock' %}">Stocks</a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'CartPage' %}" style="position:relative;">Cart
-                                    <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
-                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
+                                        <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
+                                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
@@ -122,34 +125,35 @@
 <!-- end header inner -->
 <!-- end header -->
 <!-- Our Juices -->
-<div class="juices ">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>Our Available Stocks</h2>
-                    <p>Here Is A List Of Items That Are Available in Our Stocks</p>
-                </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="titlepage">
+                <h2> Our Available Rations</h2>
+                <p>Here Is A List Of Items That Are Available in Our Stocks</p>
             </div>
-        </div>
-        <div class="row">
-            {% for i in stks %}
-            <div class="col-md-3 ">
-                <div class="our_main_box">
-                    <div class="our_img">
-                        <figure><img src="{{i.Item_Image.url}}" alt="#"/></figure>
-                    </div>
-                    <div class="our_text">
-                        <h3>{{i.Item}}</h3><br>
-                        <button class="btn btn-info"><a href="{% url 'ShopSingle' s_id=i.id %}">More Details</a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
         </div>
     </div>
+
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-2">
+        {% for i in stks %}
+        <div class="col">
+            <div class="card shadow-sm" style="max-width: 200px; margin: auto;">
+                <img src="{{i.Item_Image.url}}" class="card-img-top"
+                     style="height: 100px; width: auto; object-fit: contain;" alt="{{i.Item}}">
+                <div class="card-body text-center">
+                    <h5 class="card-title">{{i.Item}}</h5>
+                    <a href="{% url 'ShopSingle' s_id=i.id %}" class="btn btn-info btn-sm">More Details</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
 </div>
+
+
 <!-- end Our Juices  section -->
 <!--  footer -->
 <footer id="contact" class="bd-footer py-4 py-md-5 mt-5">
