--- a/RationShop/WebApp/templates/CartPage.html
+++ b/RationShop/WebApp/templates/CartPage.html
@@ -72,11 +72,17 @@
                                     <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
                                     {% endif %}
                                 </li>
+                                {% if request.session.Reg_Num %}
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'Requests' %}"> Request </a>
+                                </li>
+                                {% endif %}
+
                                 <li class="nav-item ">
                                     {% if request.session.Ration_Card %}
                                     <a class="nav-link" href="{% url 'Products' %}"> Ration </a>
                                     {% elif request.session.Reg_Num %}
-                                    <a class="nav-link" href="{% url 'ShopStock' %}"> Stock </a>
+                                    <a class="nav-link" href="{% url 'ShopStock' %}"> Stocks </a>
                                     {% endif %}
                                 </li>
 
@@ -85,9 +91,17 @@
                                     <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
                               style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
+                                {% if request.session.Reg_Num %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'OrderPage' %}">Request</a>
+                                </li>
+                                {% elif request.session.Ration_Card %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
                                 </li>
+                                {% else %}
+                                <li></li>
+                                {% endif %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'About' %}">About</a>
                                 </li>
@@ -120,6 +134,9 @@
                                         {% if shp and shp.id %}
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' shp.id %}">My Details</a>
+                                        </button>
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'PartnerDetails'%}">View Partner Details</a>
                                         </button>
                                         {% else %}
                                         <p style="text-align: center;">Details not available</p>
@@ -221,10 +238,7 @@
                         <span>Subtotal ({{item_count}} items)</span>
                         <span>₹{{total_price}}</span>
                     </div>
-                    <div class="d-flex justify-content-between mb-4">
-                        <span>Tax (5%)</span>
-                        <span>₹20.25</span>
-                    </div>
+
                     <div class="d-flex justify-content-between mb-4">
                         <strong>Total</strong>
                         <strong>₹{{total_price}}</strong>
