--- a/RationShop/WebApp/templates/ContactUs.html
+++ b/RationShop/WebApp/templates/ContactUs.html
@@ -69,6 +69,11 @@
                                     <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
                                     {% endif %}
                                 </li>
+                                {% if request.session.Reg_Num %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'Requests' %}"> Orders </a>
+                                </li>
+                                {% endif %}
                                 <li class="nav-item ">
                                     {% if request.session.Ration_Card %}
                                     <a class="nav-link" href="{% url 'Products' %}"> Ration </a>
@@ -82,12 +87,20 @@
                                 {% if request.session.Ration_Card or request.session.Reg_Num %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'CartPage' %}" style="position:relative;">Cart
-                                    <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
-                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
+                                        <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
+                                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
+                                {% if request.session.Reg_Num %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'OrderPage' %}">Request</a>
+                                </li>
+                                {% elif request.session.Ration_Card %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
                                 </li>
+                                {% else %}
+                                <li></li>
+                                {% endif %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'About' %}">About</a>
                                 </li>
@@ -116,10 +129,6 @@
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' details.id %}">My Details</a>
                                         </button>
-                                        {% elif shp and shp.id %}
-                                        <button class="dropdown-item">
-                                            <a href="{% url 'MyDetails' shp.id %}">My Details</a>
-                                        </button>
                                         {% else %}
                                         <p style="text-align: center;">Details not available</p>
                                         {% endif %}
@@ -133,11 +142,13 @@
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' shp.id %}">My Details</a>
                                         </button>
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'PartnerDetails'%}">View Partner Details</a>
+                                        </button>
                                         {% else %}
                                         <p style="text-align: center;">Details not available</p>
                                         {% endif %}
-                                        <hr style="border: 2px solid black; margin: 20px 0;">
-                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
 
@@ -145,6 +156,7 @@
                                         <h2 style="text-align:center;">Hi,{{request.session.delivery_partner}}</h2>
 
                                         <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
                                         {% endif %}
