--- a/RationShop/WebApp/templates/Home.html
+++ b/RationShop/WebApp/templates/Home.html
@@ -305,7 +305,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="titlepage">
-                    <h2>Testimonial</h2>
+                    <h2>Reviews</h2>
                     <p>is a long established fact that a reader will be distracted by the readable content of a page
                         when looking at </p>
                 </div>
