--- a/RationShop/WebApp/templates/ShopSingleProd.html
+++ b/RationShop/WebApp/templates/ShopSingleProd.html
@@ -85,6 +85,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'Home' %}"> Home </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'Requests' %}"> Request </a>
+                                </li>
                                 <li class="nav-item active">
                                     <a class="nav-link" href="{% url 'Products' %}">Ration</a>
                                 </li>
